si solucionar aut2

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="sp.js"></script>
+	<script defer src="sp.js"></script>
 	<title>Document</title>
 	<h1>Hola mundo</h1>
-	<button onclick="handleLoginClick()">PROBAR</button>
+	<input type="button" id="probar" value="PROBAR">
 </head>
 <body>
 
