--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script defer src="sp.js"></script>
+	<script defer src="test.js"></script>
 	<title>Document</title>
 	<h1>Hola mundo</h1>
 	<input type="button" id="probar" value="PROBAR">
